--- a/WithAngular6/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/WithAngular6/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,30 +7,20 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">WithAngular6 elo elo</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
             <ul class='nav navbar-nav'>
-                <li [routerLinkActive]="['link-active']">
+                <li >
                     <a [routerLink]="['/home']">
-                        <span class='glyphicon glyphicon-home'></span> Home
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/fetch-data']">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                        <span class='glyphicon glyphicon-home'></span>SuperWorkouters
                     </a>
                 </li>
             </ul>
         </div>
         <app-login>this is for login </app-login>
-
+        <br />
+        <home-list>this is going to be the home list</home-list>
     </div>
     
     
