--- a/WithAngular6/ClientApp/app/components/log-form/log-form.component.html
+++ b/WithAngular6/ClientApp/app/components/log-form/log-form.component.html
@@ -1,14 +1,14 @@
 <div class="container">
     <h3>Log Form</h3>
     <form  #logForm="ngForm" (ngSubmit)="onSubmit(logForm)">
-    <!--  <div class="form-group">
+      <div class="form-group">
         <label for="username">Name</label>
         <input type="text" class="form-control" id="username" 
         required
         [(ngModel)]="username" name="username" #musername="ngModel">
         <div *ngIf="musername.invalid && (musername.dirty || musername.touched)"
         class="alert alert-danger">name can't be empty</div>
-      </div>-->
+      </div>
 
       <div class="form-group">
         <label for="date">Date of completion</label>
