--- a/WithAngular6/ClientApp/app/components/login/login.component.html
+++ b/WithAngular6/ClientApp/app/components/login/login.component.html
@@ -1,9 +1,21 @@
 <!--<form #f="ngForm" (ngSubmit)="onLogin(f)" *ngIf="!auth.loggedIn()">
-  <input type="text" [(ngModel)]="email" name="email" placeholder="email" 
-  ngControl="email">  
+  <input type="text" [(ngModel)]="email" name="email" placeholder="email"
+  ngControl="email">
   <input type="password" [(ngModel)]="password" name="password"
     placeholder="password" ngControl="password">
-  <button type="submit" class="btn btn-success">Log in</button>    
-  
+  <button type="submit" class="btn btn-success">Log in</button>
+
 </form>-->
-witam to jest do logowania
+<h4 class='text-info text-center'>Log in</h4>
+<div class="navbar-collapse collapse">
+    <div class="nav navbar-nav">
+        <form class="form-inline my-2 my-lg-0" #f="ngForm" (ngSubmit)="onLogin(f)">
+            <input class="form-control mr-sm-2" type="text" [(ngModel)]="email" name="email" placeholder="email"
+                   ngControl="email" aria-label="email">
+            <input class="form-control mr-sm-2" type="password" [(ngModel)]="password" name="password"
+                   placeholder="password" ngControl="password" aria-label="password">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log in</button>
+        </form>
+
+    </div>
+</div>
