--- a/WithAngular6/ClientApp/app/components/home/home.component.html
+++ b/WithAngular6/ClientApp/app/components/home/home.component.html
@@ -1,2 +1,4 @@
-<h1>Hello, world!</h1>
+<h1>Hello and welcome to the best workout manager ever!</h1>
+<h2>On the left you can see the programs list, you can login or register</h2>
+<h2>Click on a program to add an exercise or log workout (available to logged in users only)</h2>
 
