--- a/WithAngular6/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/WithAngular6/ClientApp/app/components/navmenu/navmenu.component.html
@@ -19,6 +19,7 @@
             </ul>
         </div>
         <app-login>this is for login </app-login>
+        <app-register></app-register>
         <br />
         <home-list>this is going to be the home list</home-list>
     </div>
