--- a/WithAngular6/ClientApp/app/components/login/login.component.html
+++ b/WithAngular6/ClientApp/app/components/login/login.component.html
@@ -1,21 +1,17 @@
-<!--<form #f="ngForm" (ngSubmit)="onLogin(f)" *ngIf="!auth.loggedIn()">
-  <input type="text" [(ngModel)]="email" name="email" placeholder="email"
-  ngControl="email">
-  <input type="password" [(ngModel)]="password" name="password"
-    placeholder="password" ngControl="password">
-  <button type="submit" class="btn btn-success">Log in</button>
+<h4 *ngIf="!auth.loggedIn()" class='text-info text-center'>Log in</h4>
+<h4 *ngIf="auth.loggedIn()" class='text-info text-center'>Welcome!</h4>
 
-</form>-->
-<h4 class='text-info text-center'>Log in</h4>
 <div class="navbar-collapse collapse">
     <div class="nav navbar-nav">
-        <form class="form-inline my-2 my-lg-0" #f="ngForm" (ngSubmit)="onLogin(f)">
+        <button *ngIf="auth.loggedIn()" class="btn btn-outline-success my-2 my-sm-0" 
+                (click)="auth.logout()">Logout</button>
+        <form class="form-inline my-2 my-lg-0" #f="ngForm" (ngSubmit)="onLogin(f)" *ngIf="!auth.loggedIn()" >
             <input class="form-control mr-sm-2" type="text" [(ngModel)]="email" name="email" placeholder="email"
-                   ngControl="email" aria-label="email">
+                    ngControl="email" aria-label="email">
             <input class="form-control mr-sm-2" type="password" [(ngModel)]="password" name="password"
-                   placeholder="password" ngControl="password" aria-label="password">
+                    placeholder="password" ngControl="password" aria-label="password">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log in</button>
         </form>
-
+        
     </div>
 </div>
